Finish css layout

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
-    "cross-env": "^7.0.3"
+    "cross-env": "^7.0.3",
+    "normalize.css": "^8.0.1"
   }
 }
